enhance: setting a certain width for the books container to avoid layout shifts

--- a/app/components/Home/styles.module.scss
+++ b/app/components/Home/styles.module.scss
@@ -64,6 +64,7 @@
   position: relative;
   z-index: 5;
   padding-block-start: 32px;
+  width: 307.03px;
   @include for-phone-only {
     display: none;
   }
